Small optimization to "compareTo" method in XiDictionary.